Terraform/security-groups.tf
resource "aws_security_group" "bastion_sg" {
  name   = "Bastion rules"
  vpc_id = aws_vpc.test.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["179.12.16.164/32"]
  }

  egress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.test.cidr_block]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  description = "Allow SSH for admin"
}

resource "aws_security_group" "nat_sg" {
  name   = "Nat rules"
  vpc_id = aws_vpc.test.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.test.cidr_block]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.test.cidr_block]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  description = "Allow instances to acces to internet"
}

resource "aws_security_group" "general_sg" {
  name   = "General rules"
  vpc_id = aws_vpc.test.id
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.nat_sg.id]
  }
  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.nat_sg.id]
  }
  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }
  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  description = "Allow bastion and nat traffic from/to instances"
}

resource "aws_security_group" "control_plane_sg" {
  name   = "Control Plane rules"
  vpc_id = aws_vpc.test.id
  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id, aws_security_group.jenkins_sg.id]
  }
  egress {
    from_port       = 1025
    to_port         = 65535
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id, aws_security_group.jenkins_sg.id, aws_security_group.cluster_sg.id]
  }
  description = "Allow traffic to eks nodes that generate API server client traffic"
}

resource "aws_security_group" "cluster_sg" {
  name        = "Cluster rules"
  vpc_id      = aws_vpc.test.id
  description = "Allow bastion and nat traffic from/to instances"
}

resource "aws_security_group" "cluster_nodes_sg" {
  name   = "Cluster nodes ssh access rules"
  vpc_id = aws_vpc.test.id
  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }
  description = "Allow ssh traffic to cluster nodes"
}

resource "aws_security_group" "jenkins_sg" {
  name   = "Jenkins rules"
  vpc_id = aws_vpc.test.id
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  description = "Allow http traffic from/to internet"
}
